--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+.stock-changeper{
+    font-size: 16px;
+    font-weight: normal;
+}
+
+.quote-title{
+    margin-inline-start:0px !important;
+}
