Added new component for stock listing table

--- a/src/app/stocks/company-profile/company-profile.component.html
+++ b/src/app/stocks/company-profile/company-profile.component.html
@@ -10,9 +10,9 @@
                   <span>{{tile.header | uppercase}}</span>
                 </dt>
                 <dd class="quote-title">
-                  <span *ngIf="tile.type === 'text'">{{companySummary[tile.value] }}</span>
-                  <span *ngIf="tile.type === 'number'">{{companySummary[tile.value] | number}}</span> 
-                  <a href="{{companySummary[tile.value]}}" *ngIf="tile.type === 'url'">{{companySummary[tile.value]}}</a>
+                  <span *ngIf="tile.type === 'text'">{{profile[tile.value] }}</span>
+                  <span *ngIf="tile.type === 'number'">{{profile[tile.value] | number}}</span> 
+                  <a href="{{profile[tile.value]}}" *ngIf="tile.type === 'url'">{{profile[tile.value]}}</a>
                 </dd>
             </dl>
           </mat-grid-tile>
