--- a/src/app/stocks/stocks-detail/stocks-detail.component.html
+++ b/src/app/stocks/stocks-detail/stocks-detail.component.html
@@ -76,35 +76,16 @@
               <mat-card-subtitle>Recent activity from select members</mat-card-subtitle>
               <mat-divider></mat-divider>
               <mat-card-content>
-                  <mat-grid-list cols="6" rowHeight="50px">
-                      <mat-grid-tile
-                          *ngFor="let tile of tiles"
-                          [colspan]="tile.cols"
-                          [rowspan]="tile.rows"
-                          >
-                          <dl>
-                              <dt>
-                                <span>{{tile.header}}</span>
-                              </dt>
-                              <dd class="quote-title">
-                                Test
-                              </dd>
-                          </dl>
-                      </mat-grid-tile>
-                    </mat-grid-list>
+                  <company-profile [profile]="companyInfo"></company-profile>
               </mat-card-content>
           </mat-card>
           
           <mat-card>
-            <mat-card-title>Favorites</mat-card-title>
-            <mat-card-subtitle>Your favorite products</mat-card-subtitle>
+            <mat-card-title>People also brought</mat-card-title>
             <mat-divider></mat-divider>
             <mat-card-content>
-              card content
+              <stock-listing-table [tableData]="similarStocksInfo"></stock-listing-table>
             </mat-card-content>
-            <mat-card-actions>
-             
-            </mat-card-actions>
           </mat-card>
         </div>
 </div>
