--- a/src/app/stocks/stock-home/stock-home.component.html
+++ b/src/app/stocks/stock-home/stock-home.component.html
@@ -1,45 +1,13 @@
 <div layout-gt-sm="row" tdMediaToggle="gt-xs" [mediaClasses]="['push-sm']">
-    <div flex-gt-sm="33" *ngFor="let market of marketsQuotesChartData;">
+    <div flex-gt-sm="33" *ngFor="let market of marketsQuotesChartData;let i = index;">
         <mat-card>
             <mat-card-title>{{market.quote.latestPrice | currency}}<span class="stock-changeper">{{market.quote.change | currency}}</span> <span class="stock-changeper">({{market.quote.changePercent | percent}})</span></mat-card-title>
             <mat-card-subtitle>{{market.quote.companyName}} <span class="symbol" (click)="openStockDetailView(market.quote.symbol)">({{ market.quote.symbol}})</span></mat-card-subtitle>
             <mat-card-subtitle>{{market.quote.latestTime}}</mat-card-subtitle>
             <mat-divider></mat-divider>
             <mat-card-content>
-                <td-chart [style.height.px]="300">
-                    <td-chart-tooltip [trigger]="'item'"
-                                      [textStyle]="{ color: '#818181' }"
-                                      [backgroundColor]="'#ffffff'">
-                      <ng-template let-params let-ticket="ticket" tdTooltipFormatter>
-                        <ng-container *ngIf="params">
-                          <div layout="row" layout-align="start center">
-                            <mat-icon>
-                              <span>people</span>
-                            </mat-icon>
-                            <span class="mat-caption pad-left-sm">
-                              Test
-                            </span>
-                          </div>
-                        </ng-container>
-                      </ng-template>
-                    </td-chart-tooltip>
-                    <td-chart-x-axis [show]="true"
-                                      [position]="'bottom'"
-                                      [type]="'category'"
-                                      [data]="['Electronics', 'Toys', 'Grocery', 'Appliances', 'Automotive', 'Sports']"
-                                      [boundaryGap]="true">
-                    </td-chart-x-axis>
-                    <td-chart-y-axis [show]="true"
-                                      [type]="'value'"
-                                      [position]="'right'"
-                                      [max]="200">
-                    </td-chart-y-axis>
-                    <td-chart-series td-bar
-                                    [data]="[150, 130, 150, 120, 150, 120]"
-                                    [name]="'Today'"
-                                    [color]="'#F2724B'">
-                    </td-chart-series>
-                  </td-chart>
+                <!--chart [id]="market.quote.symbol" [chartConfig]="market.charts"></chart-->
+                
             </mat-card-content>
           </mat-card>
     </div>
@@ -50,20 +18,32 @@
             <mat-card-title>Sector Performance</mat-card-title>
             <mat-divider></mat-divider>
             <mat-card-content>
-              <div class="sector-container">
-                  
-  
-                      <div class="sector">x
-                        
-                      </div>
-                      <div class="sector">x</div>
-                      <div class="sector">x</div>
-                      <div class="sector">x</div>
-                      <div class="sector">x</div>
-                      <div class="sector">x</div>
-                      <div class="sector">x</div>
-                      <div class="sector">x</div>
+              <div class="tiles">
+                <div class="tile" *ngFor="let sector of sectorsInfo">
+                  {{sector.name}}
+                  <div class="percent">
+                    {{sector.performance | percent}}    
+                  </div>
+                </div>
+                <!--div class="tile">
+                    Test
+
+                </div>
+                <div class="tile">
+                    Test
+                </div>
+
+                <div class="tile">
+                    Test
+                </div>
+                <div class="tile">
+                      Test
+                </div>
+                <div class="tile">
+                    Test
+                </div-->
               </div>
+              
             </mat-card-content>
         </mat-card>
         <mat-card>
