--- a/src/app/stocks/stocks-detail/stocks-detail.component.html
+++ b/src/app/stocks/stocks-detail/stocks-detail.component.html
@@ -6,40 +6,7 @@
           <mat-card-subtitle>{{stockInfo.latestTime}}</mat-card-subtitle>
           <mat-divider></mat-divider>
           <mat-card-content>
-              <td-chart [style.height.px]="300">
-                  <td-chart-tooltip [trigger]="'item'"
-                                    [textStyle]="{ color: '#818181' }"
-                                    [backgroundColor]="'#ffffff'">
-                    <ng-template let-params let-ticket="ticket" tdTooltipFormatter>
-                      <ng-container *ngIf="params">
-                        <div layout="row" layout-align="start center">
-                          <mat-icon>
-                            <span>people</span>
-                          </mat-icon>
-                          <span class="mat-caption pad-left-sm">
-                            Test
-                          </span>
-                        </div>
-                      </ng-container>
-                    </ng-template>
-                  </td-chart-tooltip>
-                  <td-chart-x-axis [show]="true"
-                                    [position]="'bottom'"
-                                    [type]="'category'"
-                                    [data]="['Electronics', 'Toys', 'Grocery', 'Appliances', 'Automotive', 'Sports']"
-                                    [boundaryGap]="true">
-                  </td-chart-x-axis>
-                  <td-chart-y-axis [show]="true"
-                                    [type]="'value'"
-                                    [position]="'right'"
-                                    [max]="200">
-                  </td-chart-y-axis>
-                  <td-chart-series td-bar
-                                  [data]="[150, 130, 150, 120, 150, 120]"
-                                  [name]="'Today'"
-                                  [color]="'#F2724B'">
-                  </td-chart-series>
-                </td-chart>
+              <chart  [id]="stockInfo.stockSymbol" [chartConfig]="stockChartConfig"></chart>
           </mat-card-content>
         </mat-card>
         <mat-card>
