--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
           <mat-icon>menu</mat-icon>
         </button-->
        
-        <span [routerLink]="['/']" class="cursor-pointer">Covalent</span>
+        <span [routerLink]="['/']" class="cursor-pointer">ABC Investment Research</span>
         <span flex></span>
         <!--a mat-icon-button matTooltip="Docs" href="https://teradata.github.io/covalent/" target="_blank"><mat-icon>chrome_reader_mode</mat-icon></a>
         <a mat-icon-button matTooltip="Github" href="https://github.com/teradata/covalent" target="_blank"><mat-icon svgIcon="assets:github"></mat-icon></a-->
